bk_ida/gccida/c3/emit_libcall_block
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3332:4: error: expected ';' after expression
rtx reg_note; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3332:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rbp 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3334:4: error: expected ';' after expression
rtx v12; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3334:5: error: use of undeclared identifier 'v12'; did you mean 'v11'?
rtx v12; // rbx 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3333:18: note: 'v11' declared here
 struct rtx_def *v11; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3335:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3335:5: error: use of undeclared identifier 'v13'; did you mean 'v11'?
rtx v13; // rbp 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3333:18: note: 'v11' declared here
 struct rtx_def *v11; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3336:4: error: expected ';' after expression
rtx v14; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3336:5: error: use of undeclared identifier 'v14'; did you mean 'v11'?
rtx v14; // r12 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3333:18: note: 'v11' declared here
 struct rtx_def *v11; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3342:4: error: expected ';' after expression
rtx last_insn; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3342:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3344:4: error: expected ';' after expression
rtx v22; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3344:5: error: use of undeclared identifier 'v22'; did you mean 'v21'?
rtx v22; // rbx 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3343:18: note: 'v21' declared here
 struct rtx_def *v21; // rbx 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3347:4: error: expected ';' after expression
rtx v25; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3347:5: error: use of undeclared identifier 'v25'
rtx v25; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3353:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3353:36: error: expected expression
v6 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3364:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( rtx, REG_EH_REGION, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3364:10: error: expected identifier or '('
reg_note = find_reg_note( rtx, REG_EH_REGION, 0LL); 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/optabs.c:3366:6: error: use of undeclared identifier 'reg_note'
if ( reg_note ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_libcall_block/src/obj/optabs.o] Error 1
